# aoc

./: .gitignore  README.md
2016/: cm.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py
2019/: Day22.fs  Program.fs  scratch.fsx
2019_2/: 9.py  day2.ex  day5.ex  day7.ex  day9.ex  intcomp.ex
2020/: aoc.js  day01.js  day02.js  day03.js  day04.js  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day14.js  day15.js  day16.js  day17.js  day18.js  day19.js  day20.js  day21.js  day22.js  day23.js  day24.js  day25.js  pday01.js  scratch.js  template.js
2021/: NNCB.pl  Skip to content  Untitled-2  all.js  aoc.js  day01.js  day02.js  day03.js  day04.js  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day14.js  day15.js  day16.js  day17.js  day18.js  day19.js  day20.js  day21.js  day22.js  day221.js  day23.js  day24.js  day25.js  inp w  sc.js
_2017/: Cargo.toml  main
_2017/common/: Cargo.toml
_2017/common/src/: lib.rs
_2017/data/: day.txt  day21.txt  day23.txt  scratch.txt
_2017/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main  main.rs  scratch.txt  template.rs
(+207 files in other folders)
