[package]
name = "_2017"
version = "0.1.0"
authors = ["Paul Brown <paul.brown@bjss.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "*"

[lib]
name = "common"
path = "common/src/lib.rs"